# atmega88pa-hal

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
cmake/: avr-gcc.cmake  dependencies.cmake  docs.cmake  test-dependencies.cmake
docs/: Doxyfile
include/: gpio.h  gpio_v1.h  spi.h  spi_v1.h  std.h  std_v1.h  t0pwm.h  t0pwm_v1.h  t1ctc.h  t1ctc_v1.h  t1int.h  t1int_v1.h  t1nrm.h  t1nrm_v1.h  version.h
include/avrhal/: gpio.h  spi.h  std.h  t0pwm.h  t1ctc.h  t1int.h  t1nrm.h  timer0.h  timer0_pwm.h  timer1.h  timer1_ctc.h  timer1_interrupts.h  timer1_pwm.h
include/v1/: gpio.h  spi.h  std.h  t0pwm.h  t1ctc.h  t1int.h  t1nrm.h
src/: CMakeLists.txt  gpio.c  gpio.h  main.c  pwm0pc.c  pwm0pc.h  spi.c  t0pwm.c  t1ctc.c  t1int.c  t1nrm.c
src/avrhal/: CMakeLists.txt  gpio.c  spi.c  t0pwm.c  t1ctc.c  t1int.c  t1nrm.c  timer0.c  timer0_pwm.c  timer1.c  timer1_ctc.c  timer1_interrupts.c  timer1_pwm.c
test/: CMakeLists.txt  gpio_test.c  pwm0pc_test.c  spi_test.c  t0pwm_test.c  t1ctc_test.c  t1int_test.c  t1nrm_test.c
test/atmega88pa-stub/include/avr/: interrupt.h  io.h
test/atmega88pa-stub/lib/: atmega88pa-stub.c
test/avrhal/: CMakeLists.txt  gpio.c  spi.c  timer0.c  timer0_pwm.c  timer1.c  timer1_ctc.c  timer1_interrupts.c  timer1_pwm.c
test/avrhal/gpio/: CMakeLists.txt  hal_gpio_get_index.c  hal_gpio_get_register.c  hal_gpio_init.c  hal_gpio_init_mask.c  hal_gpio_read.c  hal_gpio_toggle.c  hal_gpio_write.c  hal_gpio_write_mask.c
test/avrhal/spi/: CMakeLists.txt  hal_spi_master_init.c  hal_spi_master_transmit.c
test/avrhal/t0pwm/: CMakeLists.txt  hal_t0pwm_init.c  hal_t0pwm_run.c  hal_t0pwm_stop.c
test/avrhal/t1ctc/: CMakeLists.txt  hal_t1ctc_init.c  hal_t1ctc_run.c  hal_t1ctc_stop.c
test/avrhal/t1int/: CMakeLists.txt  hal_t1int_init.c
test/avrhal/t1nrm/: CMakeLists.txt  hal_t1nrm_run.c
test/avrhal/timer0/: CMakeLists.txt  hal_timer0_run.c
test/avrhal/timer0_pwm/: CMakeLists.txt  hal_timer0_init_pwm.c  hal_timer0_pwm_init.c  hal_timer0_pwm_run.c
test/avrhal/timer1/: CMakeLists.txt  hal_timer1_run.c
test/avrhal/timer1_ctc/: CMakeLists.txt  hal_timer1_ctc_init.c
test/avrhal/timer1_interrupts/: CMakeLists.txt  hal_timer1_interrupts_init.c
test/include/: helpers.h  unity_config.h
test/include/avr/: interrupt.h  io.h
